--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/javascript.js"></script>
-    <title>Gulp setup file</title>
+    <title>Flyout menu</title>
 </head>
 <body>
-    <h1>GULP SETUP FILE</h1>
-    test    
+    <h1>Title</h1>
 </body>
 </html>
