--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/javascript.js"></script>
     <title>Flyout menu</title>
 </head>
 <body>
-    <h1>Title</h1>
+    <div id="nav">
+        <span id="burger">&#9776;</span>
+        <div id='menu'>
+            <a href="#home" class="active">Home</a>
+            <a href="#producten">Producten</a>
+            <a href="#contact">Contact</a>
+            <a href="#overons">Over ons</a>
+        </div>
+    </div>
 </body>
 </html>
